# libra_vm

./: README.md
vm_separate/: Cargo.toml
vm_separate/crypto/nextgen_crypto/src/: ed25519.rs
vm_separate/language/e2e_tests/: Cargo.toml
vm_separate/language/e2e_tests/src/: account.rs  account_universe.rs
vm_separate/language/e2e_tests/src/tests/: peer_to_peer.rs
vm_separate/src/: main.rs
vm_separate/storage/schemadb/src/: lib.rs
vm_separate/storage/sparse_merkle/src/: lib.rs
vm_separate/types/src/proto/: vm_errors.rs
vm_separate/types/src/test_helpers/: transaction_test_helpers.rs
